--- a/SkyBetufi/Info.plist
+++ b/SkyBetufi/Info.plist
@@ -26,7 +26,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.0</string>
+	<string>2.1.0</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -53,7 +53,7 @@
 		<dict/>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2.0</string>
+	<string>2.1</string>
 	<key>FacebookAppID</key>
 	<string>479868032525276</string>
 	<key>FacebookDisplayName</key>
@@ -86,6 +86,8 @@
 	<string>“黑特體育”想訪問您的日曆，用於查看指定日期的球賽信息。</string>
 	<key>NSCameraUsageDescription</key>
 	<string>“黑特體育”想使用您的相機，用於上傳頭像。</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>“黑特體育”需要您的同意,才能在訪問期間使用您的位置</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>“黑特體育”想訪問您的相冊，用於保存頭像拍照圖片。</string>
 	<key>NSPhotoLibraryUsageDescription</key>
