--- a/SkyBetufi/Info.plist
+++ b/SkyBetufi/Info.plist
@@ -26,7 +26,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.0</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -53,7 +53,7 @@
 		<dict/>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>3.0.1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>FacebookAppID</key>
 	<string>479868032525276</string>
 	<key>FacebookDisplayName</key>
