--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,6 @@ xcuserdata/
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
 # Carthage/Checkouts
 
-Pods/**/*
 Carthage/Build
 
 # fastlane
@@ -63,3 +62,4 @@ fastlane/test_output
 
 iOSInjectionProject/
 HeiteBasketball.xcworkspace/xcshareddata
+Pods
