--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ fastlane/test_output
 iOSInjectionProject/
 HeiteBasketball.xcworkspace/xcshareddata
 Pods/Target Support Files
+XXXHeiTaiPro.xcworkspace/xcshareddata
