--- a/SkyBetufi/Info.plist
+++ b/SkyBetufi/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>黑特籃球新聞雲</string>
+	<string>籃球網</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -16,13 +16,10 @@
 	<string>6.0</string>
 	<key>CFBundleLocalizations</key>
 	<array>
-		<string>zh</string>
-		<string>zh_CN</string>
 		<string>zh_TW</string>
-		<string>en</string>
 	</array>
 	<key>CFBundleName</key>
-	<string>黑特體育</string>
+	<string>籃球網</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -36,7 +33,7 @@
 			<string>facebook</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fb3840659425954285</string>
+				<string>fb393368845385476</string>
 				<string>line3rdp.$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 			</array>
 		</dict>
@@ -47,7 +44,7 @@
 			<string></string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>haters.line1655709379</string>
+				<string>haters.line1656137625</string>
 			</array>
 		</dict>
 		<dict>
@@ -62,9 +59,9 @@
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>FacebookAppID</key>
-	<string>3840659425954285</string>
+	<string>393368845385476</string>
 	<key>FacebookDisplayName</key>
-	<string>黑特體育</string>
+	<string>籃球網</string>
 	<key>GADApplicationIdentifier</key>
 	<string>ca-app-pub-4059643053601138~8130017090</string>
 	<key>LSApplicationQueriesSchemes</key>
@@ -84,7 +81,7 @@
 	<key>LineSDKConfig</key>
 	<dict>
 		<key>ChannelID</key>
-		<string>1655709379</string>
+		<string>1656137625</string>
 	</dict>
 	<key>NSAppTransportSecurity</key>
 	<dict>
@@ -92,15 +89,15 @@
 		<true/>
 	</dict>
 	<key>NSCalendarsUsageDescription</key>
-	<string>“黑特體育”想訪問您的日曆，用於查看指定日期的球賽信息。</string>
+	<string>“籃球網”想訪問您的日曆，用於查看指定日期的球賽信息。</string>
 	<key>NSCameraUsageDescription</key>
-	<string>“黑特體育”想使用您的相機，用於上傳頭像。</string>
+	<string>“籃球網”想使用您的相機，用於上傳頭像。</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>“黑特體育”需要您的同意,才能在訪問期間使用您的位置</string>
+	<string>“籃球網”需要您的同意,才能在訪問期間使用您的位置</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>“黑特體育”想訪問您的相冊，用於保存頭像拍照圖片。</string>
+	<string>“籃球網”想訪問您的相冊，用於保存頭像拍照圖片。</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>“黑特體育”想訪問您的相冊，用於上傳頭像。</string>
+	<string>“籃球網”想訪問您的相冊，用於上傳頭像。</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
