--- a/SkyBetufi/Info.plist
+++ b/SkyBetufi/Info.plist
@@ -99,7 +99,7 @@
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>“籃球網”想訪問您的相冊，用於上傳頭像。</string>
     <key>NSUserTrackingUsageDescription</key>
-    <string>您的數據將用於向您投放個性化廣告.</string>
+    <string>“籃球網”需要您允許訪問廣告標識符權限，以便於追蹤廣告和信息推送.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
